deploy simple example with client-go

--- a/tests/e2e/testdata/client.yaml
+++ b/tests/e2e/testdata/client.yaml
@@ -23,9 +23,9 @@ spec:
           "--max-time",
           "5",
           "--retry",
-          "10",
-          "--retry-max-time",
-          "300",
+          "60",
+          "--retry-delay",
+          "1",
           "--retry-connrefused",
           "server/status/200",
         ]
