--- a/charts/osm/values.yaml
+++ b/charts/osm/values.yaml
@@ -20,10 +20,10 @@ OpenServiceMesh:
     resource:
       limits:
         cpu: "1.5"
-        memory: "512M"
+        memory: "2G"
       requests:
         cpu: "0.5"
-        memory: "128M"
+        memory: "1G"
   prometheus:
     # -- Prometheus port
     port: 7070
